# tree-sitter-daml

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.gemini/tmp/: test_signature.daml
bindings/c/: tree-sitter-daml.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_daml/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDaml/: daml.h
bindings/swift/TreeSitterDamlTests/: TreeSitterDamlTests.swift
grammar/: daml.js  data.js  externals.js
queries/: highlights.scm
src/: grammar.json  node-types.json  scanner.c
test/corpus/: daml.daml  daml_big_test.txt  daml_class_definition.txt  daml_constructs.txt  daml_data_type.txt  daml_example.daml  daml_expressions.txt  daml_functions_and_binds.txt  daml_template_with_choice.txt
